--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h2 class="title">About</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="../img/banner.png"alt="">
+                    <img src="../Projeto/img/profile-pic.png"alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Wellynton and i'm <span class="typing-2"></span></div>
