--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h2 class="title">About</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="../Portifolio/img/banner.png"alt="">
+                    <img src="../img/profile-pic.png"alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Wellynton and i'm <span class="typing-2"></span></div>
@@ -107,7 +107,7 @@
                 <div class="column right">
                     <div class="card">
                         <div class="box">
-                            <img src="../Portifolio/img/profile-pic.png" alt="">
+                            <img src="../img/html-css-javascript.jpg" alt="">
                         </div>
                     </div>
     </section>
@@ -119,28 +119,28 @@
             <div class="carousel owl-carousel ">
                 <div class="card">
                     <div class="box">
-                        <img src="../Portifolio/img/instagram.png" alt="">
+                        <img src="../img/instagram.png" alt="">
                         <div class="text">Instagram</div>
                         <p>Wellynton_spagnol</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="../Portifolio/img/facebook.png" alt="">
+                        <img src="../img/facebook.png" alt="">
                         <div class="text">Facebook</div>
                         <p>Wellynton Spagnol</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="../Portifolio/img/Linkedin.png" alt="">
+                        <img src="../img/Linkedin.png" alt="">
                         <div class="text">Linkedin</div>
                         <p>Wellynton Spagnol</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="../Portifolio/img/twiter.png" alt="">
+                        <img src="../img/twiter.png" alt="">
                         <div class="text">Twitter</div>
                         <p>Av fake</p>
                     </div>
