--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="text">I'm Wellynton and i'm <span class="typing-2"></span></div>
                     <p>Hello, I'm Wellynton Spagnol, I'm studying Software Engineering, I'm currently studying Java Script, I like to learn new things and I'm always looking for new knowledge, I intend to become a full stack programmer.
                         I am communicative, I like to work in a team, and I am looking for an opportunity to enter the job market.</p>
-                    <a href="#">Download CV</a>
+                    <a href="https://www.linkedin.com/ambry/?x-li-ambry-ep=AQKEMqrymMWy0wAAAYhEC2IDoBM7dLi9WS1HmwuwGVNkK8PrW4dvdQIeTTGp4ZNIjicLqWoBvT41JQCh0726L8H5Nnh4HQ3hjDm1eyi8CSZUBECTTNsncB-7c_U-RHPTAnMYXyMT-t6-XYx_GNY5YlA2Go5xABfJVtVagQhTpTDQgrW8YsjEbLFM4Kb4f5wjOeBZFrWadOMnSOsTdhWIOKVATePGN9Jy6s-3d2G36Xaht_GchAaZ8RVOted4z33L7PlVWGxO0DfVpYtfvy4LkXzLiRqRk6lLVwBZHN5TKs0P1miiR8Dq6xd7Lbf6rJvmU_DoBFaZxT1CuF_faIukrvTRxFahPdloAv9zbBGk2OwVvWWoAemdJ9alSFfyxciQCv9VxLVYbC67ZgA0qyg9WzU9vRZ7WugfanTnhtTLZYGpuO7WaTqhkEQgOZsKwooZzaQtA3GggAP3Jr5UnVFVt8OueppqpeSDEymCTph0kPtrtLZs1x4yyBgqGym7Bv5UDhyhiYPMaXbDKSD9cAGmHA2N_XsLb_gnCcnx2q-MIZIc_aZ9b3UkMle0009LeQxCDxHDCw&x-ambry-um-filename=Profile.pdf">Download CV</a>
                 </div>
             </div>
         </div>
